--- a/carrer.html
+++ b/carrer.html
@@ -84,7 +84,7 @@
             >
             <a
               class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
-              href="#"
+              href="./index.html"
               >PATIENT PORTAL</a
             >
             <a
@@ -149,7 +149,7 @@
                   >
                   <a
                     class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
-                    href="#"
+                    href="./index.html"
                     >PATIENT PORTAL</a
                   >
                   <div>
