--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             >
             <a
               class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
-              href="#"
+              href="./index.html
               >PATIENT PORTAL</a
             >
             <a
@@ -130,7 +130,7 @@
                   >
                   <a
                     class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
-                    href="#"
+                    href="./index.html"
                     >PATIENT PORTAL</a
                   >
                   <div>
