--- a/lasertheropy.html
+++ b/lasertheropy.html
@@ -57,7 +57,7 @@
             >
             <a
               class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
-              href="#"
+              href="./index.html"
               >PATIENT PORTAL</a
             >
             <a
@@ -122,7 +122,7 @@
                   >
                   <a
                     class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
-                    href="#"
+                    href="./index.html"
                     >PATIENT PORTAL</a
                   >
                   <div>
@@ -191,7 +191,7 @@
         <div class="absolute bottom-0 w-full">
           <img
             class="mx-auto"
-            src="./assetes/img/png/health-exam-bg-img.png"
+            src="./assetes/img/png/motion-2-bg-img.png"
             alt=""
           />
         </div>
