--- a/travel.html
+++ b/travel.html
@@ -57,7 +57,7 @@
             >
             <a
               class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
-              href="#"
+              href="./index.html"
               >PATIENT PORTAL</a
             >
             <a
@@ -122,7 +122,7 @@
                   >
                   <a
                     class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
-                    href="#"
+                    href="./index.html"
                     >PATIENT PORTAL</a
                   >
                   <div>
@@ -187,7 +187,11 @@
     <section>
       <div class="bg-[rgba(215,217,221,0.50)] relative overflow-hidden">
         <div class="absolute bottom-0 w-full">
-          <img class="mx-auto" src="./assest/img/page-3-absolute.png" alt="" />
+          <img
+            class="mx-auto"
+            src="./assetes/img/png/motion-2-bg-img.png"
+            alt=""
+          />
         </div>
         <div
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[130px] relative z-[1] flex flex-col gap-14 sm:gap-15"
