--- a/vaccination.html
+++ b/vaccination.html
@@ -71,7 +71,7 @@
             >
             <a
               class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
-              href="#"
+              href="./index.html"
               >PATIENT PORTAL</a
             >
             <a
@@ -136,7 +136,7 @@
                   >
                   <a
                     class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
-                    href="#"
+                    href="./index.html"
                     >PATIENT PORTAL</a
                   >
                   <div>
