--- a/animalhealth.html
+++ b/animalhealth.html
@@ -192,7 +192,7 @@
       <div class="bg-[rgba(215,217,221,0.50)] relative">
         <div class="absolute bottom-0 w-full">
           <img
-            class="mx-auto"
+            class="mx-auto w-full"
             src="./assetes/img/png/health-exam-bg-img.png"
             alt=""
           />
