--- a/sevices.html
+++ b/sevices.html
@@ -18,7 +18,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <style>
-    .swiper-slide {
+    .swiper-slide h-full {
       width: 426px !important;
       height: auto !important;
     }
@@ -27,13 +27,13 @@
       height: 15px;
     }
     @media (max-width: 640px) {
-      .swiper-slide {
+      .swiper-slide h-full {
         width: 296px !important;
         height: auto !important;
       }
     }
     @media (max-width: 359px) {
-      .swiper-slide {
+      .swiper-slide h-full {
         width: 270px !important;
         height: auto !important;
       }
@@ -199,11 +199,11 @@
     </section>
     <!-- slider -->
     <div class="py-[34px] sm:py-15 md:py-20 bg-[#D7D9DD] px-8 sm:px-0">
-      <div class="swiper mySwiper">
+      <div class="swiper mySwiper h-full w-full">
         <div class="swiper-wrapper">
-          <div class="swiper-slide">
+          <div class="swiper-slide h-full">
             <div
-              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px]"
+              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
               <img
                 class="w-full h-full object-cover"
@@ -212,9 +212,9 @@
               />
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide h-full">
             <div
-              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px]"
+              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
               <img
                 class="w-full h-full object-cover"
@@ -223,9 +223,9 @@
               />
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide h-full">
             <div
-              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px]"
+              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
               <img
                 class="w-full h-full object-cover"
@@ -234,9 +234,9 @@
               />
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide h-full">
             <div
-              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px]"
+              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
               <img
                 class="w-full h-full object-cover"
@@ -245,9 +245,64 @@
               />
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide h-full">
             <div
-              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px]"
+              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
+            >
+              <img
+                class="w-full h-full object-cover"
+                src="./assetes/img/png/slider2-img-3.png"
+                alt="slider-img"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide h-full">
+            <div
+              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
+            >
+              <img
+                class="w-full h-full object-cover"
+                src="./assetes/img/png/slider2-img-1.png"
+                alt="slider"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide h-full">
+            <div
+              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
+            >
+              <img
+                class="w-full h-full object-cover"
+                src="./assetes/img/png/slider2-img-2.png"
+                alt="slider-img"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide h-full">
+            <div
+              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
+            >
+              <img
+                class="w-full h-full object-cover"
+                src="./assetes/img/png/slider2-img-3.png"
+                alt="slider-img"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide h-full">
+            <div
+              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
+            >
+              <img
+                class="w-full h-full object-cover"
+                src="./assetes/img/png/slider2-img-4.png"
+                alt="slider-img"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide h-full">
+            <div
+              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
               <img
                 class="w-full h-full object-cover"
