--- a/hospice&euthanasia.html
+++ b/hospice&euthanasia.html
@@ -189,7 +189,7 @@
       <div class="bg-[rgba(215,217,221,0.50)] relative">
         <div class="absolute bottom-0 w-full">
           <img
-            class="mx-auto"
+            class="mx-auto w-full"
             src="./assetes/img/png/motion-2-bg-img.png"
             alt=""
           />
