--- a/sevices.html
+++ b/sevices.html
@@ -18,25 +18,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <style>
-    .swiper-slide h-full {
-      width: 426px !important;
-      height: auto !important;
-    }
     .swiper-pagination-bullet {
       width: 15px;
       height: 15px;
-    }
-    @media (max-width: 640px) {
-      .swiper-slide h-full {
-        width: 296px !important;
-        height: auto !important;
-      }
-    }
-    @media (max-width: 359px) {
-      .swiper-slide h-full {
-        width: 270px !important;
-        height: auto !important;
-      }
     }
   </style>
   <body>
@@ -201,7 +185,8 @@
     <div class="py-[34px] sm:py-15 md:py-20 bg-[#D7D9DD] px-8 sm:px-0">
       <div class="swiper mySwiper h-full w-full">
         <div class="swiper-wrapper">
-          <div class="swiper-slide h-full">
+          <!-- Slide 1 -->
+          <div class="swiper-slide h-full !flex !justify-center !items-center">
             <div
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
@@ -212,7 +197,8 @@
               />
             </div>
           </div>
-          <div class="swiper-slide h-full">
+          <!-- Slide 2 -->
+          <div class="swiper-slide h-full !flex !justify-center !items-center">
             <div
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
@@ -223,7 +209,8 @@
               />
             </div>
           </div>
-          <div class="swiper-slide h-full">
+          <!-- Slide 3 -->
+          <div class="swiper-slide h-full !flex !justify-center !items-center">
             <div
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
@@ -234,7 +221,8 @@
               />
             </div>
           </div>
-          <div class="swiper-slide h-full">
+          <!-- Slide 4 -->
+          <div class="swiper-slide h-full !flex !justify-center !items-center">
             <div
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
@@ -245,18 +233,8 @@
               />
             </div>
           </div>
-          <div class="swiper-slide h-full">
-            <div
-              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
-            >
-              <img
-                class="w-full h-full object-cover"
-                src="./assetes/img/png/slider2-img-3.png"
-                alt="slider-img"
-              />
-            </div>
-          </div>
-          <div class="swiper-slide h-full">
+          <!-- Slide 1 -->
+          <div class="swiper-slide h-full !flex !justify-center !items-center">
             <div
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
@@ -267,7 +245,8 @@
               />
             </div>
           </div>
-          <div class="swiper-slide h-full">
+          <!-- Slide 2 -->
+          <div class="swiper-slide h-full !flex !justify-center !items-center">
             <div
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
@@ -278,7 +257,8 @@
               />
             </div>
           </div>
-          <div class="swiper-slide h-full">
+          <!-- Slide 3 -->
+          <div class="swiper-slide h-full !flex !justify-center !items-center">
             <div
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
@@ -289,7 +269,8 @@
               />
             </div>
           </div>
-          <div class="swiper-slide h-full">
+          <!-- Slide 4 -->
+          <div class="swiper-slide h-full !flex !justify-center !items-center">
             <div
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
             >
@@ -300,17 +281,7 @@
               />
             </div>
           </div>
-          <div class="swiper-slide h-full">
-            <div
-              class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px] w-full h-full"
-            >
-              <img
-                class="w-full h-full object-cover"
-                src="./assetes/img/png/slider2-img-3.png"
-                alt="slider-img"
-              />
-            </div>
-          </div>
+          <!-- Repeat as needed -->
         </div>
       </div>
       <div class="relative">
@@ -1215,21 +1186,22 @@
             slidesPerView: 1,
             spaceBetween: 20,
             loop: true,
-
             autoplay: {
               delay: 2500,
               disableOnInteraction: false,
             },
           },
-          540: {
-            slidesPerView: 2,
+          400: {
+            slidesPerView: 1.3,
             spaceBetween: 20,
             loop: true,
-
             autoplay: {
               delay: 2500,
               disableOnInteraction: false,
             },
+          },
+          500: {
+            slidesPerView: 1.7,
           },
           768: {
             slidesPerView: 2.2,
@@ -1240,7 +1212,15 @@
           1124: {
             slidesPerView: 3.5,
           },
-          1250: { slidesPerView: 3.8 },
+          1250: {
+            slidesPerView: 3.8,
+          },
+          1700: {
+            slidesPerView: 5,
+          },
+          2200: {
+            slidesPerView: 6,
+          },
         },
       });
     </script>
