--- a/sevices.html
+++ b/sevices.html
@@ -22,6 +22,12 @@
       width: 15px;
       height: 15px;
     }
+    @media (max-width: 700px) {
+      .swiper-pagination-bullet {
+        width: 10px;
+        height: 10px;
+      }
+    }
   </style>
   <body>
     <!-- navbar -->
