index book now btn

--- a/index.html
+++ b/index.html
@@ -65,15 +65,14 @@
             >
             <a
               class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
-              href="./index.html
+              href="./index.html"
               >PATIENT PORTAL</a
             >
             <a
               class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-[6px] xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
+              ><span class="btn__text">BOOK NOW</span></a
             >
-              <span class="btn__text">BOOK NOW</span>
-            </a>
           </div>
           <!-- Button to Open Sidebar -->
           <button
