--- a/sevices.html
+++ b/sevices.html
@@ -345,7 +345,7 @@
               <img
                 class="max-w-[218px] md:max-w-[250px] xl:max-w-[376px] max-md:mb-[-40px]"
                 src="./assetes/img/png/Preventive care big.png"
-                alt=""
+                alt="preventive-care"
               />
               <div class="px-[32px] lg:pl-6">
                 <p
@@ -475,7 +475,7 @@
               <img
                 class="max-w-[218px] md:max-w-[250px] xl:max-w-[376px] max-md:mb-[-40px]"
                 src="./assetes/img/png/Sick patient icon.png"
-                alt=""
+                alt="sick-patient"
               />
               <div class="px-[32px] lg:pl-6">
                 <p
@@ -623,7 +623,7 @@
               <img
                 class="max-w-[218px] md:max-w-[250px] xl:max-w-[300px] max-md:mb-[-40px]"
                 src="./assetes/img/png/Surgery icon (1).png"
-                alt=""
+                alt="surgery-icon"
               />
               <div class="px-[32px] lg:pl-6">
                 <p
@@ -726,7 +726,7 @@
               <img
                 class="max-w-[218px] md:max-w-[250px] xl:max-w-[376px] max-md:mb-[-40px]"
                 src="./assetes/img/png/Additional icon.png"
-                alt=""
+                alt="additional-icon"
               />
               <div class="px-[32px] lg:pl-6">
                 <p
@@ -949,10 +949,11 @@
               />
               <div class="flex gap-5 mt-[15px] md:mt-[22px]">
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="http://facebook.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
@@ -979,10 +980,11 @@
                   </svg>
                 </a>
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="https://in.linkedin.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
@@ -1009,10 +1011,11 @@
                   </svg>
                 </a>
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="https://www.instagram.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
