--- a/skin&dermatology.html
+++ b/skin&dermatology.html
@@ -875,10 +875,11 @@
               />
               <div class="flex gap-5 mt-[15px] md:mt-[22px]">
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="http://facebook.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
@@ -905,10 +906,11 @@
                   </svg>
                 </a>
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="https://in.linkedin.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
@@ -935,10 +937,11 @@
                   </svg>
                 </a>
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="https://www.instagram.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
