--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@
         class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto py-15 sm:py-20 flex justify-between gap-y-15 gap-15 max-lg:flex-wrap"
       >
         <div
-          class="min-[1220px]:ml-[-5%] min-[1280px]:ml-[-8%] min-[1360px]:ml-[-12%] lg:w-[55.6%] max-w-[600px] mx-auto relative"
+          class="min-[1220px]:ml-[-5%] min-[1280px]:ml-[-8%] min-[1360px]:ml-[-12%] lg:w-[55.6%] max-w-[450px] lg:max-w-[600px] mx-auto relative"
           data-aos="fade-right"
           data-aos-duration="1000"
         >
@@ -308,7 +308,7 @@
             </p>
           </div>
           <div
-            class="min-[1220px]:mr-[-5%] min-[1280px]:mr-[-8%] min-[1360px]:mr-[-12%] lg:w-[55.6%] max-w-[600px] mx-auto relative"
+            class="min-[1220px]:mr-[-5%] min-[1280px]:mr-[-8%] min-[1360px]:mr-[-12%] lg:w-[55.6%] max-w-[450px] lg:max-w-[600px] mx-auto relative"
             data-aos="fade-left"
             data-aos-duration="1000"
           >
@@ -332,7 +332,7 @@
         class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto py-15 sm:py-20 flex justify-between gap-y-15 gap-15 max-lg:flex-wrap"
       >
         <div
-          class="min-[1220px]:ml-[-5%] min-[1280px]:ml-[-8%] min-[1360px]:ml-[-12%] lg:w-[55.6%] max-w-[600px] mx-auto relative"
+          class="min-[1220px]:ml-[-5%] min-[1280px]:ml-[-8%] min-[1360px]:ml-[-12%] lg:w-[55.6%] max-w-[450px] lg:max-w-[600px] mx-auto relative"
           data-aos="fade-right"
           data-aos-duration="1000"
         >
@@ -396,12 +396,12 @@
             class="flex w-full justify-around gap-y-3 gap-[13px] max-lg:flex-wrap"
           >
             <div
-              class="max-[400px]:w-[40%] max-[640px]:w-[30%] sm:w-[25%] md:w-[20%] lg:w-[16.666666%]"
+              class="max-[400px]:w-[40%] max-[640px]:w-[25%] sm:w-[20%] md:w-[17%] lg:w-[16.666666%]"
             >
               <img
                 class="w-full"
                 src="./assetes/img/png/Ellipse 1.png"
-                alt=""
+                alt="circle-img"
               />
               <p
                 class="text-[#D7D9DD] text-sm sm:text-base md:text-lg lg:text-xl leading-[157%] sm:leading-[130%] text-center mt-[10px] sm:mt-5 md:mt-10"
@@ -410,12 +410,12 @@
               </p>
             </div>
             <div
-              class="max-[400px]:w-[40%] max-[640px]:w-[30%] sm:w-[25%] md:w-[20%] lg:w-[16.666666%]"
+              class="max-[400px]:w-[40%] max-[640px]:w-[25%] sm:w-[20%] md:w-[17%] lg:w-[16.666666%]"
             >
               <img
                 class="w-full"
                 src="./assetes/img/png/Ellipse 1.png"
-                alt=""
+                alt="circle-img"
               />
               <p
                 class="text-[#D7D9DD] text-sm sm:text-base md:text-lg lg:text-xl leading-[157%] sm:leading-[130%] text-center mt-[10px] sm:mt-5 md:mt-10"
@@ -424,12 +424,12 @@
               </p>
             </div>
             <div
-              class="max-[400px]:w-[40%] max-[640px]:w-[30%] sm:w-[25%] md:w-[20%] lg:w-[16.666666%]"
+              class="max-[400px]:w-[40%] max-[640px]:w-[25%] sm:w-[20%] md:w-[17%] lg:w-[16.666666%]"
             >
               <img
                 class="w-full"
                 src="./assetes/img/png/Ellipse 1.png"
-                alt=""
+                alt="circle-img"
               />
               <p
                 class="text-[#D7D9DD] text-sm sm:text-base md:text-lg lg:text-xl leading-[157%] sm:leading-[130%] text-center mt-[10px] sm:mt-5 md:mt-10"
@@ -438,12 +438,12 @@
               </p>
             </div>
             <div
-              class="max-[400px]:w-[40%] max-[640px]:w-[30%] sm:w-[25%] md:w-[20%] lg:w-[16.666666%]"
+              class="max-[400px]:w-[40%] max-[640px]:w-[25%] sm:w-[20%] md:w-[17%] lg:w-[16.666666%]"
             >
               <img
                 class="w-full"
                 src="./assetes/img/png/Ellipse 1.png"
-                alt=""
+                alt="circle-img"
               />
               <p
                 class="text-[#D7D9DD] text-sm sm:text-base md:text-lg lg:text-xl leading-[157%] sm:leading-[130%] text-center mt-[10px] sm:mt-5 md:mt-10"
@@ -452,12 +452,12 @@
               </p>
             </div>
             <div
-              class="max-[400px]:w-[40%] max-[640px]:w-[30%] sm:w-[25%] md:w-[20%] lg:w-[16.666666%]"
+              class="max-[400px]:w-[40%] max-[640px]:w-[25%] sm:w-[20%] md:w-[17%] lg:w-[16.666666%]"
             >
               <img
                 class="w-full"
                 src="./assetes/img/png/Ellipse 1.png"
-                alt=""
+                alt="circle-img"
               />
               <p
                 class="text-[#D7D9DD] text-sm sm:text-base md:text-lg lg:text-xl leading-[157%] sm:leading-[130%] text-center mt-[10px] sm:mt-5 md:mt-10"
@@ -466,12 +466,12 @@
               </p>
             </div>
             <div
-              class="max-[400px]:w-[40%] max-[640px]:w-[30%] sm:w-[25%] md:w-[20%] lg:w-[16.666666%]"
+              class="max-[400px]:w-[40%] max-[640px]:w-[25%] sm:w-[20%] md:w-[17%] lg:w-[16.666666%]"
             >
               <img
                 class="w-full"
                 src="./assetes/img/png/Ellipse 1.png"
-                alt=""
+                alt="circle-img"
               />
               <p
                 class="text-[#D7D9DD] text-sm sm:text-base md:text-lg lg:text-xl leading-[157%] sm:leading-[130%] text-center mt-[10px] sm:mt-5 md:mt-10"
@@ -511,10 +511,11 @@
               />
               <div class="flex gap-5 mt-[15px] md:mt-[22px]">
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="http://facebook.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
@@ -541,10 +542,11 @@
                   </svg>
                 </a>
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="https://in.linkedin.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
@@ -571,10 +573,11 @@
                   </svg>
                 </a>
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="https://www.instagram.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
