--- a/animalhealth.html
+++ b/animalhealth.html
@@ -194,7 +194,7 @@
           <img
             class="mx-auto w-full"
             src="./assetes/img/png/health-exam-bg-img.png"
-            alt=""
+            alt="bg-layer"
           />
         </div>
         <div
@@ -243,7 +243,7 @@
           >
             Why Animal Health Checks Matter:
           </p>
-          <div class="">
+          <div>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
               data-aos="fade-right"
@@ -851,10 +851,11 @@
               />
               <div class="flex gap-5 mt-[15px] md:mt-[22px]">
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="http://facebook.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
@@ -881,10 +882,11 @@
                   </svg>
                 </a>
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="https://in.linkedin.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
@@ -911,10 +913,11 @@
                   </svg>
                 </a>
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="https://www.instagram.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
