--- a/dental.html
+++ b/dental.html
@@ -192,7 +192,7 @@
           <img
             class="mx-auto w-full"
             src="./assetes/img/png/health-exam-bg-img.png"
-            alt=""
+            alt="bg-layer"
           />
         </div>
         <div
@@ -866,10 +866,11 @@
               />
               <div class="flex gap-5 mt-[15px] md:mt-[22px]">
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="http://facebook.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
@@ -896,10 +897,11 @@
                   </svg>
                 </a>
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="https://in.linkedin.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
@@ -926,10 +928,11 @@
                   </svg>
                 </a>
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="https://www.instagram.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
