--- a/emergencycare.html
+++ b/emergencycare.html
@@ -190,7 +190,7 @@
           <img
             class="mx-auto w-full"
             src="./assetes/img/png/motion-2-bg-img.png"
-            alt=""
+            alt="bg-layer"
           />
         </div>
         <div
@@ -932,10 +932,11 @@
               />
               <div class="flex gap-5 mt-[15px] md:mt-[22px]">
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="http://facebook.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
@@ -962,10 +963,11 @@
                   </svg>
                 </a>
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="https://in.linkedin.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
@@ -992,10 +994,11 @@
                   </svg>
                 </a>
                 <a
-                  class="hover:scale-[1.06] duration-200"
+                  class="hover:scale-[1.06] duration-200 max-sm:w-10 max-sm:h-10"
                   target="_blank"
                   href="https://www.instagram.com/"
                   ><svg
+                    class="w-full"
                     xmlns="http://www.w3.org/2000/svg"
                     width="50"
                     height="51"
