slider and layer img set

--- a/dental.html
+++ b/dental.html
@@ -805,7 +805,7 @@
         class="bg-[#494336] relative border-b-[2px] border-solid border-[#D8DADC] max-md:pb-[106px]"
       >
         <div
-          class="absolute right-0 w-[300px] sm:w-[400px] md:w-[600px] bottom-0"
+          class="absolute right-0 w-[300px] sm:w-[400px] xl:w-[500px] bottom-0"
         >
           <img
             class="w-full"
